src/test/ui/numbers-arithmetic/overflowing-rsh-6.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-rsh-6.rs:7:14
   |
LL |     let _n = 1i64 >> [64][0];
   |              ^^^^^^^^^^^^^^^ attempt to shift right with overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-rsh-6.rs:4:9
   |
LL | #![deny(arithmetic_overflow, const_err)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

